--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # Site settings
 title: Oliver Cardoza
 # email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Still in development
+description: "still in development"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://olivercardoza.com" # the base hostname & protocol for your site
 twitter_username: OliverCardoza
